# Arduino-Hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  CHANGELOG.rst  CHANGES.rst  LICENSE.md  README.md  requirements.txt  requirements_development.txt  setup.cfg  setup.py
.github/: dependabot.yaml  run-tests.yaml
.github/workflows/: run-pre-commit.yaml  run-tests.yaml
arduino_hooks/: arduino_cli.py  arduino_lint.py
pre_commit_arduino/: arduino_lint.py
src/pre_commit_arduino/: __init__.py  arduino_lint.py
tests/: __init__.py  conftest.py  test_arduino_cli.py  test_arduino_lint.py  test_sketch_behaviour.py
