[metadata]
name = pre_commit_arduino
version = 0.1.0
description = Checks arduino projects for issues and conventions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CreatingNull/pre-commit-arduino
author = Steve Richardson
author_email = steve.public@nulltek.xyz
license = MIT
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    clinters >= 1.3.5
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    arduino-lint-hook = pre_commit_hooks.arduino_lint:main

[bdist_wheel]
universal = True

[coverage:run]

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
