[metadata]
name = arduino_hooks
version = 0.4.0
description = Arduino tooling hooks for use with the pre-commit framework.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CreatingNull/arduino-hooks
author = Steve Richardson
author_email = steve.public@nulltek.xyz
license = MIT
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    clipy-hooks >= 0.1.1
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    arduino-lint-hook = arduino_hooks.arduino_lint:main
    arduino-cli-hook = arduino_hooks.arduino_cli:main

[bdist_wheel]
universal = True
